--- a/canary/ingress.yaml
+++ b/canary/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: stable
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.ingress.kubernetes.io/app-root: /
+    # nginx.ingress.kubernetes.io/app-root: /
 spec:
   ingressClassName: nginx
   rules:
@@ -22,10 +22,10 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: preview
+  name: canary
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.ingress.kubernetes.io/app-root: /
+    # nginx.ingress.kubernetes.io/app-root: /
 spec:
   ingressClassName: nginx
   rules:
