--- a/canary/rollout.yaml
+++ b/canary/rollout.yaml
@@ -23,12 +23,19 @@ spec:
     canary:
       stableService: stable
       canaryService: canary
+      trafficRouting:
+        nginx:
+          stableIngress: stable
+          additionalIngressAnnotations:
+            canary-by-header: X-Canary
+            canary-by-header-value: "true"
+            canary-by-cookie: "canary"
       steps:
         - setWeight: 20
         - pause: {}
         - setWeight: 40
-        - pause: { duration: 10s }
+        - pause: { duration: 1m }
         - setWeight: 60
-        - pause: { duration: 10s }
+        - pause: { duration: 1m }
         - setWeight: 80
-        - pause: { duration: 10s }
+        - pause: { duration: 1m }
