--- a/blue-green/rollout.yaml
+++ b/blue-green/rollout.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: rollouts-demo
-          image: quay.io/openshiftdemos/rollouts-demo:blue
+          image: argoproj/rollouts-demo:blue
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
